--- a/SabbathText/SabbathText.csproj
+++ b/SabbathText/SabbathText.csproj
@@ -79,6 +79,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CommonErrorCodes.cs" />
+    <Compile Include="DomainData.cs" />
     <Compile Include="SecretHelper.cs" />
     <Compile Include="StagingEnvironmentSettings.cs" />
     <Compile Include="DevEnvironmentSettings.cs" />
