Modified the GetStartedController to use the new operation

--- a/SabbathText.Web/SabbathText.Web.csproj
+++ b/SabbathText.Web/SabbathText.Web.csproj
@@ -158,6 +158,7 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Controllers\BaseController.cs" />
     <Compile Include="Controllers\GetStartedController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\StatsController.cs" />
@@ -209,13 +210,25 @@
     <Content Include="Properties\webjobs-list.json" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\common\KeyValueStorage\KeyValueStorage.csproj">
+      <Project>{baeac47d-ea85-4a29-9651-a48ae1cc31e6}</Project>
+      <Name>KeyValueStorage</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Common\QueueStorage\QueueStorage.csproj">
       <Project>{c6cc3315-77e5-48f0-beae-e4ae8c584983}</Project>
       <Name>QueueStorage</Name>
     </ProjectReference>
+    <ProjectReference Include="..\SabbathText.Compensation\SabbathText.Compensation.csproj">
+      <Project>{89227b2c-ebc6-4235-a5a8-e28ee4e034e9}</Project>
+      <Name>SabbathText.Compensation</Name>
+    </ProjectReference>
     <ProjectReference Include="..\SabbathText.Core\SabbathText.Core.csproj">
       <Project>{b45ea451-a493-4e23-a7a6-a496838edc00}</Project>
       <Name>SabbathText.Core</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\SabbathText\SabbathText.csproj">
+      <Project>{ab2bf8a3-020e-4cf6-b47a-e2a2c91de503}</Project>
+      <Name>SabbathText</Name>
     </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
