--- a/SabbathText.CompensationAgent/SabbathText.CompensationAgent.csproj
+++ b/SabbathText.CompensationAgent/SabbathText.CompensationAgent.csproj
@@ -12,6 +12,7 @@
     <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
+    <NuGetPackageImportStamp>a92c729d</NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -47,8 +48,42 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\common\KeyValueStorage\KeyValueStorage.csproj">
+      <Project>{baeac47d-ea85-4a29-9651-a48ae1cc31e6}</Project>
+      <Name>KeyValueStorage</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Common\QueueStorage\QueueStorage.csproj">
+      <Project>{c6cc3315-77e5-48f0-beae-e4ae8c584983}</Project>
+      <Name>QueueStorage</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Common\System2\System2.csproj">
+      <Project>{88035141-476b-4625-a5df-738509b58e99}</Project>
+      <Name>System2</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\SabbathText.Compensation\SabbathText.Compensation.csproj">
+      <Project>{89227b2c-ebc6-4235-a5a8-e28ee4e034e9}</Project>
+      <Name>SabbathText.Compensation</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\SabbathText.Location\SabbathText.Location.csproj">
+      <Project>{8434442e-36ae-4b1e-b37f-4cc89b4839dd}</Project>
+      <Name>SabbathText.Location</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\SabbathText\SabbathText.csproj">
+      <Project>{ab2bf8a3-020e-4cf6-b47a-e2a2c91de503}</Project>
+      <Name>SabbathText</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="..\packages\StyleCop.MSBuild.4.7.49.1\build\StyleCop.MSBuild.Targets" Condition="Exists('..\packages\StyleCop.MSBuild.4.7.49.1\build\StyleCop.MSBuild.Targets')" />
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>This project references NuGet package(s) that are missing on this computer. Enable NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('..\packages\StyleCop.MSBuild.4.7.49.1\build\StyleCop.MSBuild.Targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\StyleCop.MSBuild.4.7.49.1\build\StyleCop.MSBuild.Targets'))" />
+  </Target>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
