--- a/SabbathText.CompensationAgent/packages.config
+++ b/SabbathText.CompensationAgent/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microsoft.Web.WebJobs.Publish" version="1.0.2" targetFramework="net451" />
   <package id="StyleCop.MSBuild" version="4.7.49.1" targetFramework="net451" developmentDependency="true" />
 </packages>
