--- a/SabbathText.Compensation/SabbathText.Compensation.csproj
+++ b/SabbathText.Compensation/SabbathText.Compensation.csproj
@@ -45,10 +45,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="V1\CheckpointHandler.cs" />
-    <Compile Include="V1\CompensationProcessor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="V1\Checkpoint.cs" />
+    <Compile Include="V1\CheckpointWorker.cs" />
     <Compile Include="V1\CompensationClient.cs" />
+    <Compile Include="V1\Worker.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
@@ -62,6 +63,10 @@
     <ProjectReference Include="..\Common\QueueStorage\QueueStorage.csproj">
       <Project>{c6cc3315-77e5-48f0-beae-e4ae8c584983}</Project>
       <Name>QueueStorage</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Common\System2\System2.csproj">
+      <Project>{88035141-476b-4625-a5df-738509b58e99}</Project>
+      <Name>System2</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
