--- a/SabbathText.Web/packages.config
+++ b/SabbathText.Web/packages.config
@@ -24,6 +24,7 @@
   <package id="NodaTime" version="1.3.0" targetFramework="net451" />
   <package id="Respond" version="1.2.0" targetFramework="net451" />
   <package id="RestSharp" version="104.4.0" targetFramework="net451" />
+  <package id="StyleCop.MSBuild" version="4.7.49.1" targetFramework="net451" developmentDependency="true" />
   <package id="System.Spatial" version="5.6.2" targetFramework="net451" />
   <package id="Twilio" version="3.6.20" targetFramework="net451" />
   <package id="WebGrease" version="1.5.2" targetFramework="net451" />
