Implementation and test for BeginAuthOperation

--- a/SabbathText.Tests/SabbathText.Tests.csproj
+++ b/SabbathText.Tests/SabbathText.Tests.csproj
@@ -84,6 +84,7 @@
     <Compile Include="TestHelper.cs" />
     <Compile Include="SecretSettingTests.cs" />
     <Compile Include="SecretProviderTests.cs" />
+    <Compile Include="V1\AuthenticationTests.cs" />
     <Compile Include="V1\ProcessMessageOperationTests.cs" />
     <Compile Include="V1\MessageTests.cs" />
     <Compile Include="V1\ZipMessageTests.cs" />
