--- a/Common/QueueStorage/QueueStorage.csproj
+++ b/Common/QueueStorage/QueueStorage.csproj
@@ -69,7 +69,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="QueueStore.cs" />
-    <Compile Include="DeleteMessageException.cs" />
+    <Compile Include="MessageNotFoundException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QueueMessage.cs" />
     <Compile Include="InMemoryQueueStore.cs" />
