Make Runner a singleton webjob

--- a/SabbathText.Runner/SabbathText.Runner.csproj
+++ b/SabbathText.Runner/SabbathText.Runner.csproj
@@ -50,7 +50,9 @@
     <None Include="App.config" />
     <None Include="packages.config" />
     <None Include="Properties\webjob-publish-settings.json" />
-    <None Include="settings.job" />
+    <None Include="settings.job">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\common\KeyValueStorage\KeyValueStorage.csproj">
