--- a/Common/System2/System2.csproj
+++ b/Common/System2/System2.csproj
@@ -43,6 +43,7 @@
     <Compile Include="Clock.cs" />
     <Compile Include="FakeClockScope.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Worker.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
