--- a/SabbathText.Compensation/SabbathText.Compensation.csproj
+++ b/SabbathText.Compensation/SabbathText.Compensation.csproj
@@ -47,6 +47,7 @@
     <Compile Include="V1\CheckpointHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="V1\Checkpoint.cs" />
+    <Compile Include="V1\CheckpointWorker.cs" />
     <Compile Include="V1\CompensationClient.cs" />
   </ItemGroup>
   <ItemGroup>
