Refactored test classes

--- a/SabbathText.Tests/SabbathText.Tests.csproj
+++ b/SabbathText.Tests/SabbathText.Tests.csproj
@@ -85,7 +85,7 @@
     <Compile Include="SecretSettingTests.cs" />
     <Compile Include="SecretProviderTests.cs" />
     <Compile Include="V1\AuthenticationTests.cs" />
-    <Compile Include="V1\ProcessMessageOperationTests.cs" />
+    <Compile Include="V1\InspectAccountTests.cs" />
     <Compile Include="V1\MessageTests.cs" />
     <Compile Include="V1\ZipMessageTests.cs" />
     <Compile Include="V1\SubscribeMessageTests.cs" />
