--- a/SabbathText/SabbathText.csproj
+++ b/SabbathText/SabbathText.csproj
@@ -83,6 +83,7 @@
     <Compile Include="DomainData.cs" />
     <Compile Include="Entities\TrackerEntity.cs" />
     <Compile Include="Extensions\AssemblyExtension.cs" />
+    <Compile Include="Extensions\LocationInfoExtension.cs" />
     <Compile Include="GoodieBag.cs" />
     <Compile Include="SecretProvider.cs" />
     <Compile Include="StagingEnvironmentSettings.cs" />
