Added admin page

--- a/SabbathText.Web/SabbathText.Web.csproj
+++ b/SabbathText.Web/SabbathText.Web.csproj
@@ -183,6 +183,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\AdminAccountsController.cs" />
     <Compile Include="Controllers\AdminController.cs" />
     <Compile Include="Controllers\AuthController.cs" />
     <Compile Include="Startup.cs" />
@@ -223,6 +224,7 @@
     <Folder Include="App_Data\" />
     <Folder Include="fonts\" />
     <Folder Include="Scripts\" />
+    <Folder Include="Views\AdminAccounts\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config">
