--- a/SabbathText.Web/SabbathText.Web.csproj
+++ b/SabbathText.Web/SabbathText.Web.csproj
@@ -183,9 +183,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Controllers\AdminAccountsController.cs" />
+    <Compile Include="Controllers\ManageAccountsController.cs" />
     <Compile Include="Controllers\AdminController.cs" />
     <Compile Include="Controllers\AuthController.cs" />
+    <Compile Include="Models\AccountListModel.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="Controllers\BaseController.cs" />
     <Compile Include="Controllers\GetStartedController.cs" />
@@ -224,7 +225,6 @@
     <Folder Include="App_Data\" />
     <Folder Include="fonts\" />
     <Folder Include="Scripts\" />
-    <Folder Include="Views\AdminAccounts\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config">
@@ -241,6 +241,8 @@
     <Content Include="Views\Auth\Login.cshtml" />
     <Content Include="Views\Shared\_AdminLayout.cshtml" />
     <Content Include="Views\Admin\Index.cshtml" />
+    <Content Include="Views\ManageAccounts\Index.cshtml" />
+    <Content Include="Views\ManageAccounts\Details.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\common\KeyValueStorage\KeyValueStorage.csproj">
