Fixed csproj files

--- a/dev/DevProjects/SecretUI.csproj
+++ b/dev/DevProjects/SecretUI.csproj
@@ -33,6 +33,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="SabbathText, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\SabbathText\bin\Release\SabbathText.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -86,24 +90,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\Common\KeyValueStorage\KeyValueStorage.csproj">
-      <Project>{baeac47d-ea85-4a29-9651-a48ae1cc31e6}</Project>
-      <Name>KeyValueStorage</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\Common\QueueStorage\QueueStorage.csproj">
-      <Project>{c6cc3315-77e5-48f0-beae-e4ae8c584983}</Project>
-      <Name>QueueStorage</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\Common\System2\System2.csproj">
-      <Project>{88035141-476b-4625-a5df-738509b58e99}</Project>
-      <Name>System2</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\SabbathText\SabbathText.csproj">
-      <Project>{ab2bf8a3-020e-4cf6-b47a-e2a2c91de503}</Project>
-      <Name>SabbathText</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
