Added cert to Account Migrator

--- a/dev/DevProjects/AccountMigrator/AccountMigrator.csproj
+++ b/dev/DevProjects/AccountMigrator/AccountMigrator.csproj
@@ -91,6 +91,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="devcert.pfx">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
