--- a/SabbathText.Runner/Properties/webjob-publish-settings.json
+++ b/SabbathText.Runner/Properties/webjob-publish-settings.json
@@ -1,9 +1,9 @@
 ﻿{
   "$schema": "http://schemastore.org/schemas/json/webjob-publish-settings.json",
   "webJobName": "Runner",
-  "startTime": null,
+  "startTime": "2015-06-07T00:00:00+00:00",
   "endTime": null,
-  "jobRecurrenceFrequency": null,
-  "interval": null,
-  "runMode": "Continuous"
+  "jobRecurrenceFrequency": "Hour",
+  "interval": 1,
+  "runMode": "Scheduled"
 }
