--- a/Common/System2/System2.csproj
+++ b/Common/System2/System2.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Clock.cs" />
     <Compile Include="FakeClockScope.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StaticRand.cs" />
     <Compile Include="Worker.cs" />
   </ItemGroup>
   <ItemGroup>
