--- a/SabbathText.Tests/SabbathText.Tests.csproj
+++ b/SabbathText.Tests/SabbathText.Tests.csproj
@@ -80,6 +80,8 @@
   </Choose>
   <ItemGroup>
     <Compile Include="DomainDataAnnouncementTests.cs" />
+    <Compile Include="Location\V1\LocationInfoTests.cs" />
+    <Compile Include="Location\V1\TimeInfoTests.cs" />
     <Compile Include="V1\BibleVerseMessageTests.cs" />
     <Compile Include="V1\ClockHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -112,14 +114,6 @@
     <ProjectReference Include="..\Common\System2\System2.csproj">
       <Project>{88035141-476b-4625-a5df-738509b58e99}</Project>
       <Name>System2</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\SabbathText.Compensation\SabbathText.Compensation.csproj">
-      <Project>{89227b2c-ebc6-4235-a5a8-e28ee4e034e9}</Project>
-      <Name>SabbathText.Compensation</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\SabbathText.Location\SabbathText.Location.csproj">
-      <Project>{8434442e-36ae-4b1e-b37f-4cc89b4839dd}</Project>
-      <Name>SabbathText.Location</Name>
     </ProjectReference>
     <ProjectReference Include="..\SabbathText.Runner\SabbathText.Runner.csproj">
       <Project>{9e5f643a-d207-44c6-9a8a-902542101597}</Project>
