--- a/SabbathText/packages.config
+++ b/SabbathText/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="CsvHelper" version="2.13.0.0" targetFramework="net451" />
   <package id="Microsoft.ApplicationInsights" version="0.17.0" targetFramework="net451" />
   <package id="Microsoft.Data.Edm" version="5.6.2" targetFramework="net451" />
   <package id="Microsoft.Data.OData" version="5.6.2" targetFramework="net451" />
