--- a/SabbathText.Tests/packages.config
+++ b/SabbathText.Tests/packages.config
@@ -4,6 +4,7 @@
   <package id="Microsoft.Data.OData" version="5.6.2" targetFramework="net451" />
   <package id="Microsoft.Data.Services.Client" version="5.6.2" targetFramework="net451" />
   <package id="Microsoft.WindowsAzure.ConfigurationManager" version="1.8.0.0" targetFramework="net451" />
+  <package id="Moq" version="4.2.1506.2016" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net451" />
   <package id="StyleCop.MSBuild" version="4.7.49.1" targetFramework="net451" developmentDependency="true" />
   <package id="System.Spatial" version="5.6.2" targetFramework="net451" />
